--- a/index.html
+++ b/index.html
@@ -4,34 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <title>Age Calculator</title>
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800&display=swap" />
+  <script src="app.js" defer></script>
 </head>
 <body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="card">
+    <div class="container">
+      <form>
+        <div class="formContainer">
+          <div class="block">
+            <label for="day">
+              Day
+            </label>
+            <input type="number" id="day" placeholder="DD">
+            <small></small>
+          </div>
+          <div class="block">
+            <label for="month">
+              Month
+            </label>
+            <input type="number" id="month" placeholder="MM">
+            <small></small>
+          </div>
+          <div class="block">
+            <label for="year">
+              Year
+            </label>
+            <input type="number" id="year" placeholder="YYYY">
+            <small></small>
+          </div>
+        </div>
+        <div class="submitBlock">
+          <hr>
+          <button type="submit" class="submit">
+            <img src="./assets/images/icon-arrow.svg" alt="submit_icon">
+          </button>
+        </div>
+      </form>
+      <div class="result">
+        <h1><span id="YY">--</span>years</h1>
+        <h1><span id="MM">--</span>months</h1>
+        <h1><span id="DD">--</span>days</h1>
+      </div>
+    </div>
   </div>
 </body>
 </html>
